# graphic_viewer

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp
